Prevent the popup form body from overlapping the modal window (see #6825)

--- a/system/themes/default/src/main.css
+++ b/system/themes/default/src/main.css
@@ -360,7 +360,7 @@ h2.sub_headline_index {
 	left:0;
 	bottom:0;
 	width:100%;
-	height:52px;
+	max-height:52px;
 }
 .tl_submit_container {
 	padding:12px 18px;
